--- a/DynamicStaticHazards/requirements.txt
+++ b/DynamicStaticHazards/requirements.txt
@@ -7,7 +7,8 @@ requests == 2.23.0
 scipy == 1.4.1
 setuptools == 46.0.0
 #tensorflow-gpu == 1.13.1
-tensorflow-gpu == 2.7.2
+#tensorflow-gpu == 2.7.2
+tensorflow-gpu == 2.8.4
 wheel == 0.34.2
 yolo34py-gpu == 0.1rc12
 keras == 2.2.5
